# interactive-board

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: BoardCanvas.tsx  BoardObjectRenderer.tsx  CardPickerMenu.tsx  CloseConfirmDialog.tsx  FloatingEditor.tsx  Grid.tsx  ImageCard.tsx  TasksCard.tsx  TextCard.tsx
src/hooks/: useCloseGuard.ts  useProjectFile.ts  useTextEditor.ts
src/types/: board.ts
src/utils/: snap.ts
