[package]
name = "interactive-board"
version = "0.1.0"
description = "Interactive board application"
authors = ["you"]
edition = "2021"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "interactive-board"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2"
log = "0.4"
